Use ProcessBuilder instead of runtime exec